<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shruj.imdbapp.MovieDetailActivity">

    <TextView
        android:id="@+id/textViewMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#080000"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayoutMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewMovieName"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <GridLayout
            android:id="@+id/gridLayoutMovieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewReleaseDate" />

                <TextView
                    android:id="@+id/textViewReleaseDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textColor="#080000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/textViewGenre" />

                <TextView
                    android:id="@+id/textViewGenreValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#080000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/textViewDirector" />

                <TextView
                    android:id="@+id/textViewDirectorValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textColor="#080000" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/texViewActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/textViewActor" />

                <TextView
                    android:id="@+id/textViewActorValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textColor="#080000" />
            </LinearLayout>

        </GridLayout>

        <GridLayout
            android:id="@+id/gridLayoutImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/imageViewMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRatingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutMovieDetails"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingBarMovie"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="0.1"
            android:stepSize="0.1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutRatingBar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewPlot"
            android:textColor="#080000" />

        <TextView
            android:id="@+id/textViewPlotDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <GridLayout
            android:id="@+id/gridLayoutPrevious"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewPrevious"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:src="@drawable/arrow_left" />
        </GridLayout>

        <GridLayout
            android:id="@+id/gridLayoutFinishButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buttonFinish" />
        </GridLayout>

        <GridLayout
            android:id="@+id/gridLayoutNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewNext"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:src="@drawable/arrow_right" />
        </GridLayout>
    </LinearLayout>


</RelativeLayout>
